introduced a configuration properties file and changed a few things according to SonarCloud suggestions; unfortunately, I broke the JAR execution with this because the resource files are not found anymore when executed from JAR, so WIP;